OpenDNSSEC 2.1.9 - 2021-05-03

* OPENDNSSEC-955: Prevent concurrency between C_Login/C_OpenSession and
  C_FindObject in PKCS#11 operations as some HSMs do not like this and
  the key may (transiently) not be available.
* OPENDNSSEC-956: Harden the signing procedure to still sign zones for
  which there are unused keys specified in the signconf.  These are
  included by the enforcer because there may be (outdated) signatures
  for them, but the signer doesn't need this reference anymore in 2.1.
  However this was left in for backwards compatibility (probably).

OpenDNSSEC 2.1.8 - 2021-02-20

* OPENDNSSEC-954: Upgrade autoconf/automake configuration chain for
  version 2.69/1.16.2.
* SUPPORT-261: Fix to crash when using ods-enforcer set-policy command.
* OPENDNSSEC-953: Fix to crash in case zone file not present while getting
  a signconf update and state flush command.
  Thanks to Stefan Ubbink from SIDN for the co-operation in this fix.
* OPENDNSSEC-951: Modify the purging of keys, to make it automatic to purge
  keys from the HSM.
  Thanks to Stefan Ubbink from SIDN for the co-operation in this fix.
* OPENDNSSEC-950: Fix that caused crash when signer was offline for a
  prolonged period (but the enforcer wasn't) in the middle of a ZSK roll.
* OPENDNSSEC-952: memory leak in when receiving NOTIFY for non-existent
  zone (Thanks Sébastien Tisserant to for reporting).

OpenDNSSEC 2.1.7 - 2020-10-05

* OPENDNSSEC-949: Fix for migration bug not keeping proper parameters of NSEC3
  signed zones. Amongst others the zone become NSEC.  Loading the policies
  fixes the situation, migration scripts now corrected.  Since 1.4 does not
  require a salt, a resalt might be automatic after migrating, as this is
  a required parameter.
* OPENDNSSEC-948: do not recreate signatures for keys that are moving out
  this fixes unexpected double signatures in the zone.
* SUPPORT-253: Incorrect keytag used when using Combined Signing keys (CSK)
  (Thanks to Simon Arlott)